--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router-dom": "^5.2.0",
+        "react-spinners": "^0.13.8",
         "tailwindcss": "^3.3.3"
     },
     "scripts": {
